fixed alignment of dropdown button

--- a/app/assets/stylesheets/api/main_page/main_page_nav.scss
+++ b/app/assets/stylesheets/api/main_page/main_page_nav.scss
@@ -58,6 +58,7 @@
   text-align: right;
   align-items: center;
   justify-content: space-around;
+  padding: 6px 0px;
   margin-right: 20px;
   box-sizing: border-box;
   font-weight: 500;
@@ -106,8 +107,6 @@
   box-sizing: border-box;
   display: inline-block;
   margin-left: 8px;
-  margin-top: 6px;
-  margin-bottom: 6px;
   color: white;
   background: #fc91ad;
 }
